as done as it's gonna get

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 
 
     </section>
+    <footer>
+        <div class="footer">
+            <h2>Like What You See?</h2>
+            <a href="https://instagram.com">My Instagram</a>
+        </div>
+    </footer>
     
 
     
